<resources>
    <string name="app_name">Dr phil test</string>
    <string name="q1">1. When do you feel your best?</string>
    <string name="q2">2. You usually walk…</string>
    <string name="q3">3. When talking to people, you…</string>
    <string name="q4">4. When relaxing, you sit with…</string>
    <string name="q5">5. When something really amuses you, you react with…</string>
    <string name="q6">6. When you go to a party or social gathering, you…</string>
    <string name="q7">7. You’re working very hard, concentrating hard, and you’re interrupted. You…</string>
    <string name="q8">8. Which of the following colors do you like the most?</string>
    <string name="q9">9. When you are in bed at night, in those last few moments before going to sleep, you are…</string>
    <string name="q10">10. You often dream that you are…</string>
    <string name="ans1.1">In the morning</string>
    <string name="ans1.2">During the afternoon and early evening</string>
    <string name="ans1.3"> Late at night</string>
    <string name="ans2.1">Fairly fast, with long steps</string>
    <string name="ans2.2"> Fairly fast, with small steps</string>
    <string name="ans2.3">Less fast, head up, looking the world in the face</string>
    <string name="ans2.4">Less fast, head down</string>
    <string name="ans2.5">Very slowly</string>
    <string name="ans3.1">Stand with your arms folded</string>
    <string name="ans3.2">Have your hands clasped</string>
    <string name="ans3.3">Have one or both of your hands on your hips</string>
    <string name="ans3.4">Touch or push the person to whom you are talking</string>
    <string name="ans3.5">Play with your ear or hair, touch your chin, or smooth your hair</string>
    <string name="ans4.1">Your knees bent, with your legs neatly side by side</string>
    <string name="ans4.2">Your legs crossed</string>
    <string name="ans4.3">Your legs stretched out or straight</string>
    <string name="ans4.4"> One leg curled under you</string>
    <string name="ans5.1">A big, appreciative laugh</string>
    <string name="ans5.2">A laugh, but not a loud one</string>
    <string name="ans5.3">A quiet chuckle</string>
    <string name="ans5.4">A sheepish smile</string>
    <string name="ans6.1">Make a loud entrance, so that everyone notices you</string>
    <string name="ans6.2">Make a quiet entrance, looking around for someone you know</string>
    <string name="ans6.3">Make the quietest entrance, trying to stay unnoticed</string>
    <string name="ans7.1">Welcome the break</string>
    <string name="ans7.2">Feel extremely irritated</string>
    <string name="ans7.3">Vary between these two extremes</string>
    <string name="ans8.1">Red/orange</string>
    <string name="ans8.2">Black</string>
    <string name="ans8.3">Yellow/light blue</string>
    <string name="ans8.4">Green</string>
    <string name="ans8.5"> Dark blue/purple</string>
    <string name="ans8.6">White</string>
    <string name="ans8.7">Brown/gray</string>
    <string name="ans9.1">Stretched out on your back</string>
    <string name="ans9.2">Stretched out face down on your stomach</string>
    <string name="ans9.3"> On your side, slightly curled</string>
    <string name="ans9.4">With your head on one arm</string>
    <string name="ans9.5">With your head under the covers</string>
    <string name="ans10.1">Falling</string>
    <string name="ans10.2">Fighting or struggling</string>
    <string name="ans10.3">Searching for something or somebody</string>
    <string name="ans10.4">Flying or floating</string>
    <string name="ans10.5"> You usually have dreamless sleep</string>
    <string name="ans10.6">Your dreams are always pleasant</string>
    <string name="toast"> please answer all questions </string>
    <string name="points">your score: </string>
    <string name="res">reset</string>
    <string name="submit">submit</string>
    <string name="share">share</string>
    <string name="back">back</string>
    <string name="hint">This is a real test given by the Human Relations Dept.
        at many of the major corporations today.
        It helps them get better insight concerning their
        employees and prospective employees.</string>
    <string name="greater60">
    Others see you as someone they should "handle with care." You\'re
  seen as vain, self-centered, and who is extremely dominant. Others may admire you,
wishing they could be more like you, but don\'t always trust you, hesitating to become
too deeply involved with you
    </string>
    <string name="greater50">
Others see you as an exciting, highly volatile, rather impulsive
personality; a natural leader, who\'s quick to make decisions, though not always the right
ones. They see you as bold and adventuresome, someone who will try anything once;
someone who takes chances and enjoys an adventure. They enjoy being in your
company because of the excitement you radiate
    </string>
    <string name="greater40">
 Others see you as fresh, lively, charming, amusing, practical, and
always interesting; someone who\'s constantly in the center of attention, but sufficiently
well-balanced not to let it go to their head. They also see you as kind, considerate, and
understanding; someone who'll always cheer them up and help them out
    </string>
    <string name="greater30">
Others see you as sensible, cautious, careful , practical. They see
you as clever, gifted, or talented, but modest. Not a person who makes friends too
quickly or easily, but someone who\'s extremely loyal to friends you do make and who
expect the same loyalty in return. Those who really get to know you realize it takes a lot
to shake your trust in your friends, but equally that it takes you a long time to get over if
that trust is ever broken.
    </string>
    <string name="greater20">
Your friends see you as painstaking and fussy. They see you as
very cautious, extremely careful, a slow and steady plodder. It would really surprise
them if you ever did something impulsively or on the spur of the moment, expecting you
to examine everything carefully from every angle and then, usually decide against it.
They think this reaction is caused partly by your careful nature.
    </string>
    <string name="less20">
      People think you are shy, nervous, and indecisive, someone who
needs looking after, who always wants someone else to make the decisions  who
doesn\'t want to get involved with anyone or anything! They see you as a worrier who
always sees problems that don't exist. Some people think you\'re boring. Only those who
know you well know that you aren't.
  </string>


</resources>
