<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context=".Main2Activity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/hint"
            style="@style/hint"
            android:text="@string/hint" />

        <TextView
            android:id="@+id/textView"
            style="@style/result"
            android:text="" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                >

                <Button
                  style="@style/btn"
                    android:onClick="back"
                    android:text="@string/back" />

                <Button
                  style="@style/btn"
                    android:onClick="share"
                    android:text="@string/share" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>